--- a/client/src/base.sass
+++ b/client/src/base.sass
@@ -18,6 +18,7 @@ body
   --color-footer-text: rgba(36,106,120,1)
   --color-header-logo: rgba(37,163,189,1)
   --color-divider: rgba(37,163,189, 0.2)
+  --color-warning-copy: #BD3E25
   --color-cancel: #BD3E25
   --color-blood: #AD231F
   --color-bloodreq: #5C6D70
