--- a/client/src/_vars.sass
+++ b/client/src/_vars.sass
@@ -15,6 +15,7 @@ $z-modal-wrapper: 20
 $z-modal-content: 30
 
 $font-size--header: 28px
+$font-line-height-std: 24px
 $font-size--subheader: 21px
 $font-size--sectionheader: 18px
 $font-size--body: 15px
