--- a/client/src/Pages/Search.sass
+++ b/client/src/Pages/Search.sass
@@ -1,33 +1,28 @@
+@import ../_vars
+
 .search
   &-flaggroups
     display: flex
     flex-wrap: wrap
     max-width: 840px
     overflow: hidden
-    margin-top: 12px
+    margin-top: $space-medium
+    gap: $space-micro
 
   &-flaggroup
-    $margin: 8px
     flex: 0 0 max-content
-    margin-right: $margin
-    margin-bottom: $margin
 
   &-text
-    margin-top: 10px
+    margin-top: $space-small
 
 .searchresults
-  margin-top: 12px
-  display: flex
-  flex-wrap: wrap
-  justify-content: space-between
-  align-items: flex-start
-  gap: 16px
-  &__result
-    display: flex
-    justify-content: center
+  display: grid
+  gap: $space-large
+  place-items: start center
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr))
 
 .searchpage
   &__filters
-    margin-top: 24px
+    margin-top: $space-large
   &__results
-    margin-top: 24px
+    margin-top: $space-large
