--- a/client/src/UI/DecklistsIndex.sass
+++ b/client/src/UI/DecklistsIndex.sass
@@ -3,7 +3,7 @@
 .deckindex
   margin: $space-medium 0 $space-huge
   display: grid
-  grid-template-columns: repeat(auto-fill, minmax(405px,1fr))
+  grid-template-columns: repeat(auto-fit, minmax(340px,1fr))
   gap: $space-medium
 
 .deckindexcard
@@ -15,17 +15,10 @@
   overflow: hidden
   position: relative
   &__illustration
-    opacity: 0.5
     position: absolute
-    transform: translate3d(-25px, -35px, 0) scale(1.4,1.4)
+    left: 50%
+    transform: translate3d(-50%,0,0) scale(1.4,1.4)
     z-index: $z-deckindex-illustration
-  &__illustration-overlay
-    display: block
-    width: 100%
-    height: 100%
-    position: absolute
-    z-index: $z-deckindex-illustration-overlay
-    background: linear-gradient(90deg, rgba(0,0,0,0) 0%, rgba(0,0,0,0.5) 80%, rgba(0,0,0,1) 90%, rgba(0,0,0,1) 100%)
   &__content
     z-index: $z-deckindex-content
     position: absolute
@@ -60,3 +53,20 @@
     bottom: 0
     left: 0
     right: 0
+
+.char-bg
+  overflow: hidden
+  position: relative
+  width: 240px
+  height: 195px
+  &__img
+    position: absolute
+    top: -72px
+    left: -58px
+    z-index: 1
+  &__mask
+    position: absolute
+    height: 100%
+    width: 100%
+    z-index: 2
+    background: linear-gradient(90deg, rgba(0,0,0,1) 1%, rgba(0,0,0,0.4) 20%, rgba(0,0,0,0.4) 80%, rgba(0,0,0,1) 99%)
