--- a/client/src/UI/DecklistsIndex.sass
+++ b/client/src/UI/DecklistsIndex.sass
@@ -17,7 +17,7 @@
   &__illustration
     position: absolute
     left: 50%
-    transform: translate3d(-50%,0,0) scale(1.4,1.4)
+    transform: translate3d(-50%,15%,0) scale(1.4,1.4)
     z-index: $z-deckindex-illustration
   &__content
     z-index: $z-deckindex-content
