--- a/client/src/UI/DecklistsIndex.sass
+++ b/client/src/UI/DecklistsIndex.sass
@@ -36,7 +36,7 @@
     color: #FFF
   &__clans
     display: flex
-    margin-top: 12px
+    margin-top: 6px
   &__clan
     display: block
     width: 24px
@@ -46,11 +46,11 @@
       margin-left: 0
   &__summary
     font-size: 15px
-    line-height: 24px
+    line-height: 15px
     color: #FFF
     text-align: center
     position: absolute
-    bottom: 0
+    bottom: 2px
     left: 0
     right: 0
 
