--- a/client/src/UI/Icon.sass
+++ b/client/src/UI/Icon.sass
@@ -27,7 +27,7 @@ $discipline_icons: animalism auspex blood_sorcery celerity dominate fortitude ob
     -webkit-mask-image: url("../../assets/icons/discipline-#{$icon}.svg")
     mask-image: url("../../assets/icons/discipline-#{$icon}.svg")
 
-$other_icons: action agenda alchemy attack blood bloodpotency bloodpotencyrequirement conspiracy crown damage delete edit faction haven influence influence_modifier leader library mental ongoing physical ranged reaction ritual save scheme shield social special skull title unhosted_action
+$other_icons: action agenda alchemy attack blood bloodpotency bloodpotencyrequirement conspiracy crown damage delete edit faction haven influence influence_modifier leader library mental menu ongoing physical ranged reaction ritual save scheme shield social special skull title unhosted_action
 @each $icon in $other_icons
   .ui-icon_#{$icon}
     -webkit-mask-image: url("../../assets/icons/icon-#{$icon}.svg")
