Mobile UI nav adjustments

--- a/client/src/_vars.sass
+++ b/client/src/_vars.sass
@@ -10,6 +10,7 @@ $z-deckbuilder-actions: 1
 $z-deckindex-illustration: 1
 $z-deckindex-content: 3
 $z-card-name-image: 10
+$z-burgernav: 11
 $z-modal-wrapper: 20
 $z-modal-content: 30
 
@@ -26,3 +27,5 @@ $space-small: 12px
 $space-medium: 16px
 $space-large: 24px
 $space-huge: 32px
+
+$header-height: 40px
