--- a/client/src/UI/Layout/Template.sass
+++ b/client/src/UI/Layout/Template.sass
@@ -4,14 +4,14 @@
 body
   align-content: stretch
   display: grid
-  grid-template-rows: 40px auto 160px
+  grid-template-rows: $header-height auto 160px
   justify-content: stretch
   min-height: 100vh
 
   .page-header
     grid-row: 1 / 2
     background: var(--color-bg-farthest)
-    padding: 10px $safearea-margin
+    padding: 0 $safearea-margin
 
   .page-content
     grid-row: 2 / 3
@@ -20,7 +20,7 @@ body
   .page-footer
     grid-row: 3 / 4
     background: var(--color-bg-farthest)
-    padding: 10px $safearea-margin
+    padding: $space-small $safearea-margin
 
   .footer-legal
     font-size: var(--font-size--micro)
@@ -28,6 +28,6 @@ body
     line-height: 1.2
 
     p
-      margin-top: 5px
+      margin-top: $space-nano
       &:first-of-type
         margin-top: 0
