--- a/client/src/UI/Decklist.sass
+++ b/client/src/UI/Decklist.sass
@@ -128,6 +128,7 @@
     height: $size
     border-radius: $size
     cursor: pointer
+    margin-right: $space-micro
     .deck-faction__leader-icon
       width: 100%
       height: 100%
