Adjust decklist view library groups

--- a/client/src/UI/Decklist.sass
+++ b/client/src/UI/Decklist.sass
@@ -87,7 +87,7 @@
     display: inline-block
     width: 12px
     text-align: center
-  &__entry-discipline
+  &__entry-clan
     $iconSize: 24px
     display: inline-block
     margin-left: $space-nano
