fix content margins

--- a/client/src/Pages/Search.sass
+++ b/client/src/Pages/Search.sass
@@ -16,6 +16,7 @@
     margin-top: $space-small
 
 .searchresults
+  margin-top: $space-medium
   display: grid
   gap: $space-large
   place-items: start center
