Add game mode to client

--- a/client/src/UI/Decklist.sass
+++ b/client/src/UI/Decklist.sass
@@ -60,6 +60,15 @@
     margin-left: $space-micro
 
 .decklist
+  &__meta
+    display: flex
+    gap: $space-micro
+  &__game-mode
+    font-size: $font-size--body
+    font-style: italic
+    color: var(--color-copy-highlight)
+
+.decklist
   &--section-header
     font-size: $font-size--sectionheader
     line-height: $font-line-height-std
