--- a/client/src/base.sass
+++ b/client/src/base.sass
@@ -12,6 +12,8 @@ body
   --color-bg-far: rgba(28, 51, 71, 1)
   --color-bg-close: rgba(38, 70, 97, 1)
   --color-bg-closest: rgba(47, 86, 120, 1)
+  --color-stamp-bg: rgba(47, 86, 120, 0.5)
+  --color-stamp-text: #FFF
   --color-copy-medium: rgba(229, 209, 149, 1)
   --color-copy-highlight: #F5EDD6
   --color-link: rgba(87, 189, 37, 1)
