--- a/client/src/UI/Icon.sass
+++ b/client/src/UI/Icon.sass
@@ -18,20 +18,23 @@
 $clan_icons: brujah gangrel malkavian nosferatu thinblood toreador tremere ventrue
 @each $icon in $clan_icons
   .ui-icon_#{$icon}
-    -webkit-mask-image: url("../../assets/icons/clan-#{$icon}.svg")
-    mask-image: url("../../assets/icons/clan-#{$icon}.svg")
+    --svg-ui-icon: url("data-url:../../assets/icons/clan-#{$icon}.svg")
+    -webkit-mask-image: var(--svg-ui-icon)
+    mask-image: var(--svg-ui-icon)
 
 $discipline_icons: animalism auspex blood_sorcery celerity dominate fortitude obsfuscate potence presence protean thin_blood_alchemy
 @each $icon in $discipline_icons
   .ui-icon_#{$icon}
-    -webkit-mask-image: url("../../assets/icons/discipline-#{$icon}.svg")
-    mask-image: url("../../assets/icons/discipline-#{$icon}.svg")
+    --svg-ui-icon: url("data-url:../../assets/icons/discipline-#{$icon}.svg")
+    -webkit-mask-image: var(--svg-ui-icon)
+    mask-image: var(--svg-ui-icon)
 
 $other_icons: action agenda alchemy attack blood bloodpotency bloodpotencyrequirement conspiracy crown damage delete edit faction haven influence influence_modifier leader library mental menu ongoing physical ranged reaction ritual save scheme shield social special title unhosted_action
 @each $icon in $other_icons
   .ui-icon_#{$icon}
-    -webkit-mask-image: url("../../assets/icons/icon-#{$icon}.svg")
-    mask-image: url("../../assets/icons/icon-#{$icon}.svg")
+    --svg-ui-icon: url("data-url:../../assets/icons/icon-#{$icon}.svg")
+    -webkit-mask-image: var(--svg-ui-icon)
+    mask-image: var(--svg-ui-icon)
 
 .ui-icon--colored
   &.ui-icon_bloodpotency
