--- a/client/src/UI/Layout/Header.sass
+++ b/client/src/UI/Layout/Header.sass
@@ -29,16 +29,19 @@
   @media screen and ( min-width: $breakpoint-ipad--vertical)
     width: $largeLogoSize
   &__img
+    --svg-rivalsdb-ico: url("data-url:../../assets/logo/rivalsdb-ico.svg") no-repeat center center / contain
+
     width: 100%
     height: 100%
     display: block
     overflow: hidden
     background-color: var(--color-header-logo)
-    -webkit-mask: url("../../assets/logo/rivalsdb-ico.svg") no-repeat center center / contain
-    mask: url("../../assets/logo/rivalsdb-ico.svg") no-repeat center center / contain
+    -webkit-mask: var(--svg-rivalsdb-ico)
+    mask: var(--svg-rivalsdb-ico)
     @media screen and ( min-width: $breakpoint-ipad--vertical)
-      -webkit-mask-image: url("../../assets/logo/rivalsdb-logo.svg")
-      mask-image: url("../../assets/logo/rivalsdb-logo.svg")
+      --svg-rivalsdb-logo: url("data-url:../../assets/logo/rivalsdb-logo.svg")
+      -webkit-mask-image: var(--svg-rivalsdb-logo)
+      mask-image: var(--svg-rivalsdb-logo)
 
   &__txt
     display: none
