Decklist index filtering

--- a/client/src/Pages/Decks.sass
+++ b/client/src/Pages/Decks.sass
@@ -2,3 +2,12 @@
 
 .page-decks__content
   margin-top: $space-medium
+
+.deck-index-filters
+  margin-top: $space-small
+  &__filter
+    display: inline-block
+    margin-left: $space-small
+
+    label
+      display: none
