--- a/client/src/base.sass
+++ b/client/src/base.sass
@@ -4,8 +4,11 @@ body
   --font-size--small: 14px
   --font-size--micro: 12px
 
-  --color-icon-negative: #FFF
   --color-icon-standard: #E5D195
+  --color-icon-standard-bg: #2f5678
+  --color-icon-negative: #FFF
+  --color-icon-negative-bg: #000
+
   --color-bg-modalcover: rgba(15, 27, 38, 0.8)
   --color-bg-modalshadow: rgba(0, 0, 0, 0.9)
   --color-bg-farthest: rgba(15, 27, 38, 1)
