--- a/client/src/styles.sass
+++ b/client/src/styles.sass
@@ -17,5 +17,5 @@
 @import ./UI/Layout/Header.sass
 @import ./UI/Layout/Modal.sass
 @import ./UI/Layout/Template.sass
-@import ./UI/Icon/Discipline.sass
+@import ./UI/Icon/V2.sass
 @import ./UI/Text.sass
