--- a/client/src/styles.sass
+++ b/client/src/styles.sass
@@ -12,10 +12,11 @@
 @import ./UI/Decklist.sass
 @import ./UI/DecklistsIndex.sass
 @import ./UI/FilterSelection.sass
+@import ./UI/HandTester.sass
 @import ./UI/Icon.sass
+@import ./UI/Icon/V2.sass
 @import ./UI/Layout/Deck.sass
 @import ./UI/Layout/Header.sass
 @import ./UI/Layout/Modal.sass
 @import ./UI/Layout/Template.sass
-@import ./UI/Icon/V2.sass
 @import ./UI/Text.sass
