Quickchange cards in deckbuilder

--- a/client/src/UI/Decklist.sass
+++ b/client/src/UI/Decklist.sass
@@ -96,6 +96,9 @@
     display: inline-block
     width: 12px
     text-align: center
+  &__entry-picker
+    display: inline-block
+    margin-right: $space-micro
   &__entry-clan
     $iconSize: 24px
     display: inline-block
