--- a/client/src/styles.sass
+++ b/client/src/styles.sass
@@ -19,5 +19,6 @@
 @import ./UI/Layout/Header.sass
 @import ./UI/Layout/Modal.sass
 @import ./UI/Layout/Template.sass
+@import ./UI/MultiSelect.sass
 @import ./UI/QuantityPicker.sass
 @import ./UI/Text.sass
