--- a/client/src/_vars.sass
+++ b/client/src/_vars.sass
@@ -12,6 +12,7 @@ $z-deckindex-content: 3
 $z-card-name-image: 10
 $z-burgernav: 11
 $z-modal-wrapper: 20
+$z-toast: 25
 $z-modal-content: 30
 
 $font-size--header: 28px
@@ -19,6 +20,7 @@ $font-line-height-std: 24px
 $font-size--subheader: 21px
 $font-size--sectionheader: 18px
 $font-size--body: 15px
+$font-size--discreet: 14px
 $font-size--small: 12px
 
 $space-nano: 4px
