--- a/client/src/base.sass
+++ b/client/src/base.sass
@@ -15,6 +15,7 @@ body
   --color-bg-far: rgba(28, 51, 71, 1)
   --color-bg-close: rgba(38, 70, 97, 1)
   --color-bg-closest: rgba(47, 86, 120, 1)
+  --color-bg-warning: #993926
   --color-stamp-bg: rgba(47, 86, 120, 0.5)
   --color-stamp-text: #FFF
   --color-copy-medium: rgba(229, 209, 149, 1)
