--- a/client/src/UI/Decklist.sass
+++ b/client/src/UI/Decklist.sass
@@ -63,7 +63,7 @@
   &__meta
     display: flex
     gap: $space-micro
-  &__game-mode
+  &__details
     font-size: $font-size--body
     font-style: italic
     color: var(--color-copy-highlight)
