View public/private on my decks

--- a/client/src/UI/DecklistsIndex.sass
+++ b/client/src/UI/DecklistsIndex.sass
@@ -45,7 +45,7 @@
     font-size: 13px
     color: var(--color-stamp-text)
 
-  &__byline
+  &__subtitle
     font-size: 15px
     line-height: 24px
     color: #FFF
