--- a/client/src/styles.sass
+++ b/client/src/styles.sass
@@ -1,6 +1,7 @@
 @import ./base.sass
 @import ./Pages/About.sass
 @import ./Pages/Decks.sass
+@import ./Pages/Home_.sass
 @import ./Pages/MyDecks.sass
 @import ./Pages/Profile.sass
 @import ./Pages/Search.sass
