Hand simulator draws more and reshuffle

--- a/client/src/UI/HandTester.sass
+++ b/client/src/UI/HandTester.sass
@@ -9,3 +9,9 @@
     gap: $space-small
     @media screen and ( min-width: $breakpoint-ipad--horizontal)
       grid-template-columns: repeat(auto-fill, minmax(180px,1fr))
+  &__draw-more
+    display: flex
+    flex-direction: column
+    justify-content: center
+    gap: $space-large
+    min-height: 182px
