--- a/client/src/styles.sass
+++ b/client/src/styles.sass
@@ -17,10 +17,12 @@
 @import ./UI/Icon.sass
 @import ./UI/Icon/V2.sass
 @import ./UI/Layout/Deck.sass
+@import ./UI/Layout/Footer.sass
 @import ./UI/Layout/Header.sass
 @import ./UI/Layout/Template.sass
 @import ./UI/Layout/Toast.sass
 @import ./UI/MultiSelect.sass
+@import ./UI/PatreonButton.sass
 @import ./UI/QuantityPicker.sass
 @import ./UI/Text.sass
 @import ./UI/Username.sass
