--- a/client/src/base.sass
+++ b/client/src/base.sass
@@ -2,7 +2,7 @@ body
   --font-size--header: 20px
   --font-size--default: 16px
   --font-size--small: 14px
-  --font-size--micro: 12px
+  --font-size--micro: 11px
 
   --color-icon-standard: #E5D195
   --color-icon-standard-bg: #2f5678
@@ -42,6 +42,7 @@ body
   font-size: var(--font-size--default)
   line-height: 24px
   margin: 0
+  text-rendering: optimizelegibility
 
 a
   color: var(--color-link)
