--- a/client/src/UI/Icon.sass
+++ b/client/src/UI/Icon.sass
@@ -15,7 +15,7 @@
   span
     visibility: hidden
 
-$other_icons: action agenda alchemy attack blood bloodpotencyrequirement city conspiracy crown damage delete edit faction hand_of_cards haven influence influence_modifier leader library mental menu ongoing physical ranged reaction ritual save scheme shield skull social special title unhosted_action
+$other_icons: action agenda alchemy animal attack blood bloodpotencyrequirement city conspiracy crown damage delete edit faction hand_of_cards haven influence influence_modifier leader library mental menu ongoing physical ranged reaction ritual save scheme shield skull social special title unhosted_action
 @each $icon in $other_icons
   .ui-icon_#{$icon}
     --svg-ui-icon: url("data-url:../../assets/icons/icon-#{$icon}.svg")
