--- a/client/src/UI/Layout/Template.sass
+++ b/client/src/UI/Layout/Template.sass
@@ -23,3 +23,9 @@
     grid-row: 3 / 4
     background: var(--color-bg-farthest)
     padding: $space-large $safearea-margin $space-small
+
+  .page-header
+    border-bottom: 6px solid #0057b7
+
+  .page-content
+    border-top: 6px solid #ffd700
