deckbuilder remove character from decklist

--- a/client/src/UI/Decklist.sass
+++ b/client/src/UI/Decklist.sass
@@ -180,3 +180,17 @@
 
   &__discipline
     margin-left: $space-nano
+  &__remove
+    $size: 21px
+    all: unset
+    margin-left: $space-small
+    background: var(--color-bg-closest)
+    border-radius: 100%
+    height: $size
+    width: $size
+    line-height: $size
+    font-weight: normal
+    display: inline-block
+    text-align: center
+    cursor: pointer
+    user-select: none
