--- a/client/src/styles.sass
+++ b/client/src/styles.sass
@@ -16,11 +16,11 @@
 @import ./UI/HandTester.sass
 @import ./UI/Icon.sass
 @import ./UI/Icon/V2.sass
-@import ./UI/Layout/Deck.sass
 @import ./UI/Layout/Footer.sass
 @import ./UI/Layout/Header.sass
 @import ./UI/Layout/Template.sass
 @import ./UI/Layout/Toast.sass
+@import ./UI/Layout/TSplit.sass
 @import ./UI/MultiSelect.sass
 @import ./UI/PatreonButton.sass
 @import ./UI/QuantityPicker.sass
