--- a/client/src/UI/DeckbuildSelections.sass
+++ b/client/src/UI/DeckbuildSelections.sass
@@ -50,3 +50,13 @@
   flex-wrap: wrap
   gap: $space-micro
   margin-bottom: $space-medium
+
+.deckbuild-tabs
+  display: grid
+  grid-template-columns: repeat(2,1fr)
+  &__tab
+    padding: 8px 16px
+    text-align: center
+    cursor: pointer
+    &--active
+      background-color: #ccc
