Deck description and some reorg

--- a/client/src/styles.sass
+++ b/client/src/styles.sass
@@ -1,5 +1,6 @@
 @import ./base.sass
 @import ./Pages/About.sass
+@import ./Pages/Deck/View/Id_.sass
 @import ./Pages/Decks.sass
 @import ./Pages/Home_.sass
 @import ./Pages/MyDecks.sass
@@ -25,4 +26,5 @@
 @import ./UI/PatreonButton.sass
 @import ./UI/QuantityPicker.sass
 @import ./UI/Text.sass
+@import ./UI/TopTabs.sass
 @import ./UI/Username.sass
