--- a/client/src/styles.sass
+++ b/client/src/styles.sass
@@ -6,13 +6,14 @@
 @import ./Pages/MyDecks.sass
 @import ./Pages/Profile.sass
 @import ./Pages/Search.sass
+@import ./Pages/Tournaments.sass
 @import ./UI/ActionBar.sass
 @import ./UI/Attribute.sass
 @import ./UI/Card.sass
 @import ./UI/CardName.sass
 @import ./UI/DeckbuildSelections.sass
+@import ./UI/DeckCard.sass
 @import ./UI/Decklist.sass
-@import ./UI/DecklistsIndex.sass
 @import ./UI/FilterSelection.sass
 @import ./UI/HandTester.sass
 @import ./UI/Icon.sass
