--- a/client/src/Pages/Decks.sass
+++ b/client/src/Pages/Decks.sass
@@ -1,7 +1,14 @@
 @import ../_vars
 
-.page-decks__content
-  margin-top: $space-medium
+.page-decks
+  &__content
+    margin-top: $space-medium
+
+  &__decks
+    margin: $space-medium 0 $space-huge
+    display: grid
+    grid-template-columns: repeat(auto-fit, minmax(340px,1fr))
+    gap: $space-medium
 
 .deck-index-filters
   margin-top: $space-small
