--- a/client/src/UI/DeckbuildSelections.sass
+++ b/client/src/UI/DeckbuildSelections.sass
@@ -35,19 +35,20 @@
   display: flex
   align-items: baseline
   margin-bottom: $space-small
+  gap: $space-micro
   &__title
     margin: 0
     flex: 0 0 auto
   &__action
-    flex: 1 0 auto
+    flex: 0 0 auto
     cursor: pointer
     color: var(--color-link)
     text-decoration: underline
     user-select: none
-    margin-left: $space-small
     &--secondary
-      flex: 0 0 auto
+      flex: 1 0 auto
       margin: 0
+      text-align: right
 
 .deckbuild-filters
   display: flex
