blood potency filter

--- a/client/src/UI/DeckbuildSelections.sass
+++ b/client/src/UI/DeckbuildSelections.sass
@@ -55,6 +55,11 @@
   flex-wrap: wrap
   gap: $space-micro
   margin-bottom: $space-medium
+  &__multi
+    align-self: center
+  &__multi-label
+    display: none
+  &__multi-select
 
 .deckbuild-description
   &__label
