--- a/client/src/Pages/Deck/View/Id_.sass
+++ b/client/src/Pages/Deck/View/Id_.sass
@@ -5,6 +5,8 @@
     margin-bottom: $space-large
 
 .deckview__description
+  padding-bottom: $space-huge
+
   h1,h2,h3
     line-height: 1
   h1, h2
@@ -18,6 +20,8 @@
     color: var(--color-copy-highlight)
   p
     font-size: 100%
+    + p
+      margin-top: 1rem
 
   blockquote
     padding: $space-small 0 $space-small 2ch
