--- a/client/src/styles.sass
+++ b/client/src/styles.sass
@@ -23,6 +23,7 @@
 @import ./UI/Layout/Template.sass
 @import ./UI/Layout/Toast.sass
 @import ./UI/Layout/TSplit.sass
+@import ./UI/Markdown.sass
 @import ./UI/MultiSelect.sass
 @import ./UI/PatreonButton.sass
 @import ./UI/QuantityPicker.sass
