adds ghoul to the list of "other icons" in stylesheet.

--- a/client/src/UI/Icon.sass
+++ b/client/src/UI/Icon.sass
@@ -15,7 +15,7 @@
   span
     visibility: hidden
 
-$other_icons: action agenda alchemy animal attack blood bloodpotencyrequirement city city-conclave city-core city-hoe conspiracy crown damage delete edit faction ghoul hand_of_cards haven influence influence_modifier leader library mental menu ongoing physical ranged reaction ritual save scheme shield skull social special title trap unhosted_action
+$other_icons: action agenda alchemy animal attack blood bloodpotencyrequirement city city-conclave city-core city-hoe conspiracy crown damage delete edit faction ghoul hand_of_cards haven influence influence_modifier leader library mental menu ongoing physical ranged reaction ritual save scheme shield skull social special title trap unhosted_action ghoul
 @each $icon in $other_icons
   .ui-icon_#{$icon}
     --svg-ui-icon: url("data-url:../../assets/icons/icon-#{$icon}.svg")
