adds About link to footer.

--- a/client/src/UI/Layout/Footer.sass
+++ b/client/src/UI/Layout/Footer.sass
@@ -5,6 +5,9 @@
   &__patreon
     margin-bottom: $space-medium
 
+  &__links
+    font-size: var(--font-size--small)
+
   &__legal
     font-size: var(--font-size--micro)
     color: var(--color-footer-text)
