--- a/client/src/styles.sass
+++ b/client/src/styles.sass
@@ -17,6 +17,7 @@
 @import ./UI/FilterSelection.sass
 @import ./UI/HandTester.sass
 @import ./UI/Icon.sass
+@import ./UI/Icon/V2.sass
 @import ./UI/Layout/Footer.sass
 @import ./UI/Layout/Header.sass
 @import ./UI/Layout/Template.sass
