render filter button groups as fieldsets with legends.

--- a/client/src/UI/FilterSelection.sass
+++ b/client/src/UI/FilterSelection.sass
@@ -1,4 +1,6 @@
 .filterpicker
+  border-color: var(--color-copy-darker)
+  border-radius: .5rem
   display: flex
   flex-wrap: wrap
 
@@ -32,3 +34,6 @@
 
     &--active
       background: var(--color-bg-farthest)
+
+  legend
+    color: var(--color-copy-highlight)
