--- a/client/src/base.sass
+++ b/client/src/base.sass
@@ -18,6 +18,7 @@ body
   --color-bg-warning: #993926
   --color-stamp-bg: rgba(47, 86, 120, 0.5)
   --color-stamp-text: #FFF
+  --color-copy-darker: rgba(229, 209, 149, 0.5)
   --color-copy-medium: rgba(229, 209, 149, 1)
   --color-copy-highlight: #F5EDD6
   --color-link: rgba(87, 189, 37, 1)
