Form Type and Stack Additions/Updates

--- a/client/src/UI/Icon.sass
+++ b/client/src/UI/Icon.sass
@@ -15,7 +15,7 @@
   span
     visibility: hidden
 
-$other_icons: action agenda alchemy animal arsenal attack blood bloodpotencyrequirement city city-conclave city-core city-hoe city-hah conspiracy crown damage delete dronejockey edit faction fleet gift ghoul hand_of_cards haven influence influence_modifier leader library mental menu monster ongoing ordnance physical ranged reaction relic rite ritual save scheme shield skull social special title trap unhosted_action vehicle
+$other_icons: action agenda alchemy animal arsenal attack blood bloodpotencyrequirement city city-conclave city-core city-hoe city-hah conspiracy crown damage delete dronejockey edit faction fleet form gift ghoul hand_of_cards haven influence influence_modifier leader library mental menu monster ongoing ordnance physical ranged reaction relic rite ritual save scheme shield skull social special title trap unhosted_action vehicle
 @each $icon in $other_icons
   .ui-icon_#{$icon}
     --svg-ui-icon: url("data-url:../../assets/icons/icon-#{$icon}.svg")
